fix user agent stylesheet ul padding-left 40px on mobile versions

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@
 
 }
 
+ul{
+    padding-left: 0;
+}
+
 .button:active {
     position: relative;
     top: 1px;
